data route now working

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
   <p>Click the button to scrape the current home page of YouTube</p>
-  <button>Scrape</button><br>
+  <a href="/scraper"><button href="/scraper">Scrape</button></a>
+  <br>
   <a href="/data">See Scraped Data</a>
