--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -4,20 +4,16 @@
   <title>Data</title>
 </head>
 <body>
-{{#each note}}
-  <p>{{note}}</p>
-{{/each}}
-
 <ol>
 {{#each data}}
   <li>{{data}}</li><form method="POST" action="/notes">Make a note about this data: <input type="text" name="note" placeholder="Note..."></input><input class="hidden" name="id" value="{{_id}}"></input><button class="btn-primary" type="submit">Submit</button></form>
-  
-  <ul>
-    {{#each note}}
-    <li>{{note}}</li>
-    {{/each}}
-  </ul>
-
+  {{#if notes}}
+    <ul>
+      {{#each notes}}
+      <a href={{""}}>See Note</a><br>
+      {{/each}}
+    </ul>
+  {{/if}}
 {{/each}}
 </ol>
 </body>
